@@ -1,3 +1,3 @@
-__version__ = "0.1.4.1"
+__version__ = "0.1.4.2"
 
 DEBUG = False
