@@ -1,4 +1,4 @@
-function th=rotateticklabel(h,theta,demo)
+function th=rotateticklabel(h,rot,demo)
 %ROTATETICKLABEL rotates tick labels
 %   TH=ROTATETICKLABEL(H,ROT) is the calling form where H is a handle to
 %   the axis that contains the XTickLabels that are to be rotated. ROT is
@@ -28,19 +28,19 @@ if nargin==3
     datetick('x',0,'keepticks')
     h=gca;
     set(h,'position',[0.13 0.35 0.775 0.55])
-    theta=90;
+    rot=90;
 end
 
 %set the default rotation if user doesn't specify
 if nargin==1
-    theta=90;
+    rot=90;
 end
 %make sure the rotation is in the range 0:360 (brute force method)
-while theta>360
-    theta=theta-360;
+while rot>360
+    rot=rot-360;
 end
-while theta<0
-    theta=theta+360;
+while rot<0
+    rot=rot+360;
 end
 %get current tick labels
 a=get(h,'XTickLabel');
@@ -50,9 +50,9 @@ set(h,'XTickLabel',[]);
 b=get(h,'XTick');
 c=get(h,'YTick');
 %make new tick labels
-if theta<180
-    th=text(b,repmat(c(1)-.1*(c(2)-c(1)),length(b),1),a,'HorizontalAlignment','right','rotation',theta);
+if rot<180
+    th=text(b,repmat(c(1)-.1*(c(2)-c(1)),length(b),1),a,'HorizontalAlignment','right','rotation',rot);
 else
-    th=text(b,repmat(c(1)-.1*(c(2)-c(1)),length(b),1),a,'HorizontalAlignment','left','rotation',theta);
+    th=text(b,repmat(c(1)-.1*(c(2)-c(1)),length(b),1),a,'HorizontalAlignment','left','rotation',rot);
 end
 
